friendService/src/main/java/com/example/friendservice/exception/commonException/error/ErrorCode.java
package com.example.friendservice.exception.commonException.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    HttpStatus getHttpStatus();
    String getMessage();
}
